--- a/src/style.css
+++ b/src/style.css
@@ -123,7 +123,7 @@
     justify-content: flex-start;
     align-items: center;
     padding: 10px;
-    border-radius: 20px 2px 20px 20px;
+    border-radius: 20px 20px 20px 20px;
     background-color: #f4f4f4;
     border-bottom: 1px solid #ddd;
 }
@@ -195,5 +195,66 @@
       transform: scale(1);
       opacity: 1;
     }
+  }
+  
+  /* Settings.css */
+.settings-page {
+    padding: 20px;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  
+  .light-mode {
+    background-color: #ffffff;
+    color: #000000;
+  }
+  
+  .dark-mode {
+    background-color: #333333;
+    color: #ffffff;
+  }
+  
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 34px;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+    border-radius: 50%;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    transform: translateX(26px);
   }
   
